--- a/6-SpringBootRest/pom.xml
+++ b/6-SpringBootRest/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.7</version>
+		<version>3.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springpractice</groupId>
-	<artifactId>SpringBootRest</artifactId>
+	<artifactId>6-SpringBootRest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBootRest</name>
+	<name>6-SpringBootRest</name>
 	<description>Demo project for Spring Boot and REST APIs</description>
 	<url/>
 	<licenses>
@@ -57,6 +57,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.36</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
