--- a/6-SpringBootRest/src/main/resources/application.properties
+++ b/6-SpringBootRest/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=6-SpringBootRest
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringJDBC
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
