--- a/8-SpringEcom/src/main/resources/application.properties
+++ b/8-SpringEcom/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=8-SpringEcom
 spring.datasource.url=jdbc:postgresql://localhost:5432/SpringJDBC
 spring.datasource.username=postgres
 spring.datasource.password=0000
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
