--- a/8-SpringEcom/src/main/resources/application.properties
+++ b/8-SpringEcom/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.hikari.auto-commit=false
