--- a/10-SpringSecurityDemo/src/main/resources/application.properties
+++ b/10-SpringSecurityDemo/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=10-SpringSecurityDemo
 spring.security.user.name=harsha
 spring.security.user.password=1234
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringJDBC
+spring.datasource.username=postgres
+spring.datasource.password=0000
