Add JWT Authentication

--- a/10-SpringSecurityDemo/src/main/resources/application.properties
+++ b/10-SpringSecurityDemo/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.security.user.password=1234
 spring.datasource.url=jdbc:postgresql://localhost:5432/SpringJDBC
 spring.datasource.username=postgres
 spring.datasource.password=0000
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
